CSS Fixups to prevent grid breaks in searches

--- a/mediaphile/src/app/pages/helper/recommendations/recommendations.component.scss
+++ b/mediaphile/src/app/pages/helper/recommendations/recommendations.component.scss
@@ -23,7 +23,7 @@ h2 {
 }
 
 .scrolling-wrapper, .scrolling-wrapper-flexbox {
-  height: 300px;
+  height: 400px;
   margin-bottom: 20px;
   width: 90%;
   -webkit-overflow-scrolling: touch;
@@ -39,6 +39,11 @@ h2 {
   height:100px;
 }
 
+.entity-wrapper {
+  width: 78%;
+  margin-right: 3em;
+}
+
 @media only screen and (max-width: 768px) {
 
   .scroll {
@@ -46,5 +51,18 @@ h2 {
   }
   .scrolling-wrapper, .scrolling-wrapper-flexbox {
     width:100%;
+  }
+  .entity-wrapper {
+    margin-right:0px;
+  }
+  .scrolling-wrapper, .scrolling-wrapper-flexbox {
+    height: 400px !important;
+  }
+}
+
+
+@media only screen and (max-width: 992px) {
+  .scrolling-wrapper, .scrolling-wrapper-flexbox {
+    height: 300px;
   }
 }
